--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <html>
 <head>
-	<title>1942 Game</title>
+	<title>1942</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id='container'>
 		<div id='hero' style='top:300px; left:300px;'></div>
 		<div id='enemies'></div>
-		<div id='bullets'>
-			<div class='bullet' style='top:150px; left:200px;'></div>
-			<div class='bullet' style='top:250px; left:200px;'></div>
-			<div class='bullet' style='top:350px; left:200px;'></div>
-			<div class='bullet' style='top:450px; left:200px;'></div>
-		</div>	
+		<div id="bigEnemy"></div>
+		<div id='bullets'></div>	
 	</div>
-	<div id='score'>100</div>
+	<div id='score'>0</div>
 <script src="1942.js"></script>
 
 </body>
